cloud_jenkins_server/cfn_jenkins_server.yml
Description: >
    Nicolas Neuburger / Udacity Nanodegree Cloud DevOps Engineer

Parameters:
    EnvironmentName:
        Description: An environment name that will be prefixed to resou
        Type: String
        Default: UdacityProject
    MyCidrIpAddress:
      Description: Specific IP Address that gets access to the bastion hosts
      Type: String
    KeyNameSsh:
      Description: Name of Key Value Pair for SSHing into bastion hosts
      Type: String

Resources:
    JenkinsSecGroup:
        Type: AWS::EC2::SecurityGroup
        Properties:
            GroupDescription: basic Jenkins security group
            VpcId:
                Fn::ImportValue:
                    !Sub "${EnvironmentName}-VPCID"
            SecurityGroupIngress:
                - IpProtocol: tcp
                  FromPort: 22
                  ToPort: 22
                  CidrIp: !Ref "MyCidrIpAddress"
                - IpProtocol: tcp
                  FromPort: 8080
                  ToPort: 8080
                  CidrIp: 0.0.0.0/0
            SecurityGroupEgress:
                - IpProtocol: tcp
                  FromPort: 0
                  ToPort: 65535
                  CidrIp: 0.0.0.0/0
    JenkinsHost:
        Type: AWS::EC2::Instance
        DependsOn: JenkinsSecGroup
        Properties:
          SubnetId:
              Fn::ImportValue:
                  !Sub "${EnvironmentName}-PUB1-NET"
          UserData:
            Fn::Base64: !Sub |
              #!/bin/bash
              apt-get update

              # Step 2 - Install Java
              apt install -y default-jdk

              # Step 3 - Download Jenkins package.
              # You can go to http://pkg.jenkins.io/debian/ to see the available commands
              # First, add a key to your system
              wget -q -O - https://pkg.jenkins.io/debian/jenkins.io.key | apt-key add -

              # # Step 4 - Add the following entry in your /etc/apt/sources.list:
              sh -c 'echo deb https://pkg.jenkins.io/debian-stable binary/ > /etc/apt/sources.list.d/jenkins.list'

              # # Step 5 -Update your local package index
              apt-get update

              # Step 6 - Install Jenkins
              apt-get install -y jenkins

              # Step 7 - Start the Jenkins server
              systemctl start jenkins

              # Step 8 - Enable the service to load during boot
              systemctl enable jenkins
              systemctl status jenkins start sshd

          ImageId: ami-0b418580298265d5c # Ubuntu 18.04 (HVM) 64-bit x86 - Free Tier
          IamInstanceProfile: "JenkinsServerIamProfile"
          SecurityGroupIds:
          - !GetAtt JenkinsSecGroup.GroupId
          #SecurityGroups: [ "BastionSecGroup" ]
          InstanceType: t2.micro
          KeyName: !Ref KeyNameSsh
